[package]
name = "backend-newsletter"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-server = "0.7.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
time = { version = "0.3.36", features = ["macros", "formatting"] }
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
