[package]
name = "backend-newsletter"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-server = "0.7.1"
dotenv = "0.15.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8" , features = ["postgres", "uuid", "runtime-tokio-native-tls"] }
time = { version = "0.3.36", features = ["macros", "formatting"] }
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
uuid = { version = "1.8.0", features = ["v7", "serde"] }
