[package]
name = "backend-nextlevelcodeblog"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
argon2 = { version = "0.5.3", features = []}
async-trait = "0.1.85"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie"] }
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
httpc-test = "0.1.10"
image = "0.25.5"
jsonwebtoken = "9.3.0"
lettre = "0.11.7"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid", "migrate"] }
thiserror = "2.0.11"
time = { version = "0.3.37", features = ["formatting", "macros", "serde", "parsing"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["trace", "fs", "cors", "auth"]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.12.1", features = ["v7", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
